--- a/LianaOzolina/index.html
+++ b/LianaOzolina/index.html
@@ -69,11 +69,12 @@
 <a-entity gltf-model="#Floor" position="0 0 0" color="#808080"></a-entity>
 <a-entity gltf-model="#Navm" position="0 0.01 0" material="color: yellow; metalness: 0.76; roughness: 0.9"  navmesh></a-entity>
 
+<!--Victory-Cup-->
+<a-entity gltf-model="#Cup" position="0 1 -14"></a-entity>
 
-  <!--Tetris Blocks-->
-  <a-entity mixin="MxTH" position="-1 2 -4.5" rotation="0 0 0"></a-entity>
-  <!--
-  <a-entity mixin="MxTH" position="-1 4.5 2" rotation="0 0 0"></a-entity>
+<!--Tetris Blocks-->
+  <!--TetrisH-->
+  <a-entity mixin="MxTH" position="-1 2 -4.5"></a-entity>
   <a-entity mixin="MxTH" position="2 1 -3.5" rotation="0 0 0"></a-entity>
   <a-entity mixin="MxTH" position="2 0.5 -12" rotation="90 0 0"></a-entity>
   <a-entity mixin="MxTH" position="0 1.5 -14" rotation="90 0 0"></a-entity>
@@ -81,7 +82,7 @@
   <a-entity mixin="MxTH" position="2 1 -16.5" rotation="0 0 0"></a-entity>
   <a-entity mixin="MxTH" position="-2.5 1 -12" rotation="0 90 90"></a-entity>
   <a-entity mixin="MxTH" position="0 2 -11.5" rotation="0 0 0"></a-entity> 
-  
+  <!--TetrisI-->
   <a-entity mixin="MxTI" position="3.5 2 -3.5" rotation="0 0 0"></a-entity> 
   <a-entity mixin="MxTI" position="-2 2.5 -3.5" rotation="90 90 0"></a-entity> 
   <a-entity mixin="MxTI" position="0 0.5 -4.5" rotation="90 90 0"></a-entity> 
@@ -92,13 +93,12 @@
   <a-entity mixin="MxTI" position="0.5 2 -16.5" rotation="0 0 0"></a-entity>
   <a-entity mixin="MxTI" position="-2.5 1.5 -15" rotation="90 0 0"></a-entity>
   <a-entity mixin="MxTI" position="-0.5 0.5 -12" rotation="90 0 0"></a-entity>
-
-  <a-entity mixin="MxTL" position="0.5 1.5 -3.5" rotation="0 180 -90"></a-entity>
-  <a-entity mixin="MxTL" position="2 3 -3.5"></a-entity>
+  <!--TetrisL-->
+  <a-entity mixin="MxTL" position="0 1.5 -3.5" rotation="0 180 -90"></a-entity>
+  <a-entity mixin="MxTL" position="1.5 3 -3.5"></a-entity>
   <a-entity mixin="MxTL" position="-3 1.5 -3.5" rotation="0 0 -90"></a-entity>
   <a-entity mixin="MxTL" position="-1 4.5 -3.5" rotation="0 0 -90"></a-entity>
   <a-entity mixin="MxTL" position="0.5 2 -4.5"></a-entity>
-  <a-entity mixin="MxTL" position="-2 0.5 -10.5" rotation="0 0 -90"></a-entity>
   <a-entity mixin="MxTL" position="-2 0.5 -10.5" rotation="0 0 -90"></a-entity>
   <a-entity mixin="MxTL" position="-2 0.5 -13.5" rotation="90 90 0"></a-entity>
   <a-entity mixin="MxTL" position="-0.5 2 -12.5" rotation="0 0 180"></a-entity>
@@ -107,14 +107,14 @@
   <a-entity mixin="MxTL" position="1 0.5 -15.5" rotation="0.5 -0 90"></a-entity>
   <a-entity mixin="MxTL" position="3 0.5 -15.5" rotation="0 -180 90"></a-entity>
   <a-entity mixin="MxTL" position="-0.5 1 -16.5" rotation="0 0 180"></a-entity>
-  -->
+  <!--TetrisT-->
   <a-entity mixin="MxTT" position="-1.5 1 -3.5" rotation="0 0 0"></a-entity>
-  <a-entity mixin="MxTT" position="0 3.5 -3.5" rotation="0 0 0"></a-entity>
+  <a-entity mixin="MxTT" position="0 3.5 -3.5" rotation="0 0 90"></a-entity>
   <a-entity mixin="MxTT" position="1.5 1 -10.5" rotation="0 0 0"></a-entity>
-  <a-entity mixin="MxTT" position="0.5 1 -12.5" rotation="0 0 0"></a-entity>
-  <a-entity mixin="MxTT" position="-1.5 1 -12.5" rotation="0 0 0"></a-entity>
-  <a-entity mixin="MxTT" position="-0.5 1 -15.5" rotation="0 0 0"></a-entity>
-  <a-entity mixin="MxTT" position="2.5 1 -13.5" rotation="0 0 0"></a-entity>
+  <a-entity mixin="MxTT" position="0.5 1 -12.5" rotation="0 90 0"></a-entity>
+  <a-entity mixin="MxTT" position="-1.5 1 -12.5" rotation="0 90 180"></a-entity>
+  <a-entity mixin="MxTT" position="-0.5 1 -15.5" rotation="0 0 180"></a-entity>
+  <a-entity mixin="MxTT" position="2.5 1 -13.5" rotation="0 -90 180"></a-entity>
 <!--Camera with cursor and hand tracking enabled. Pinch gesture as click event-->
 
       <a-entity 
