--- a/LianaOzolina/Armada/index.html
+++ b/LianaOzolina/Armada/index.html
@@ -4,7 +4,7 @@
   <script src="https://unpkg.com/aframe-environment-component@1.3.3/dist/aframe-environment-component.min.js"></script>
   <script src="https://unpkg.com/aframe-orbit-controls@1.3.2/dist/aframe-orbit-controls.min.js"></script>
 
-  <script src="comp/aframe-bmfont-component.js"></script>
+  <script src="https://unpkg.com/aframe-super-shooter-kit@1.0.1/dist/aframe-super-shooter-kit.min.js"></script>
 </head>
 
 <!--Assets-->
