--- a/MaryiaBrauer/crisiskit.html
+++ b/MaryiaBrauer/crisiskit.html
@@ -84,7 +84,7 @@
         id="cameraRig" 
         movement-controls="speed: 1.01; enabled:false"
         a-cursor-teleport="cameraRig: #cameraRig; cameraHead: #head">
-        <a-entity id="head" position="0 1.6 0" camera="near: 0.1" look-controls="reverseMouseDrag: false">
+        <a-entity id="head" position="0 1.6 0" camera="near: 0.1" look-controls="reverseMouseDrag: false; pointerLockEnabled: true">
           <a-cursor color="black" position="0 0 -0.7"></a-cursor>
         </a-entity>
         <a-entity id="leftHand" hand-tracking-grab-controls="hand: left"></a-entity>
