--- a/LianaOzolina/Armada/index.html
+++ b/LianaOzolina/Armada/index.html
@@ -6,41 +6,97 @@
   <script src="https://unpkg.com/aframe-environment-component@1.3.3/dist/aframe-environment-component.min.js"></script>
 <!--Camera-Orbit-->
   <script src="https://unpkg.com/aframe-orbit-controls@1.3.2/dist/aframe-orbit-controls.min.js"></script>
-
-<!--Event-Set Component-->
-    <script src="https://unpkg.com/aframe-event-set-component@5/dist/aframe-event-set-component.min.js"></script>
-
-<!--A-Frame Extras-->
-    <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.6.1/dist/aframe-extras.min.js"></script>
- 
 <!--navigation component used in ImGame -->   
     <script src="a-cursor-navigation.js"></script>
-  
+<!--Event-Set Component-->
+    <script src="https://unpkg.com/aframe-event-set-component@5/dist/aframe-event-set-component.min.js"></script>
+<!--A-Frame Extras-->
+    <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.6.1/dist/aframe-extras.min.js"></script>
+<!--navigation component used in ImGame -->   
+    <script src="a-cursor-navigation.js"></script>
+<!--Shooting-Script--> 
+  <script src="aframe-super-shooter-kit.min.js"></script>
+<!--Click-toshoot -->
+<script>
+    AFRAME.registerComponent('click-to-shoot', {
+      init: function () {
+        document.body.addEventListener('mousedown', () => { this.el.emit('shoot'); });
+      }
+    });
+    /* Change color when hit. */
+    AFRAME.registerComponent('hit-handler', {
+      dependencies: ['material'],
+
+      init: function () {
+        var color;
+        var el = this.el;
+
+        color = new THREE.Color();
+        color.set('000');
+        el.components.material.material.color.copy(color);
+        el.addEventListener('hit', () => {
+          color.addScalar(0.05);
+          el.components.material.material.color.copy(color);
+        });
+
+        el.addEventListener('die', () => {
+  // Hide visually
+  el.setAttribute('visible', false);
+
+  // Make uninteractable
+  el.classList.remove('enemy'); // if raycaster targets a class
+  el.removeAttribute('raycaster');
+
+  // Optional: stop future events
+  el.pause();
+});
+      }
+    });
+  </script>
+
+
+
+
+
+
+
 
 </head>
 
-<!--Assets-->
-  <a-asset>
-        <a-asset-item id="Ship" src="Objects/SpaceShip.glb"></a-asset-item>
-  </a-asset>
-
-
 <!--Mixins-->
 
+<!--Assets-->
+  <a-entity id="bulletTemplate" bullet geometry="primitive: sphere; radius: 1" material="color: orange"></a-entity>
 
+  <a-asset>
+        <a-asset-item id="Ship" src="Objects/SpaceShip.glb"></a-asset-item>
+        <a-asset-item id="Bull" src="Objects/BulletModel.glb" scale="5 5 5"></a-asset-item>
+  </a-asset>
+
+<!--World-->
 <body>
+  <a-scene background="color: #DADADA" obb-collider="showColliders: false" environment="preset: tron">
 
-  <a-tube path="0 0 -2, 0 2 -2, -4 2 -2, -4 0 -2" radius="0.6" normal-material=""></a-tube>
+  <a-entity id="bulletTemplate" bullet gltf-model="#Bull" material="color: orange"></a-entity>
 
-  <a-scene obb-collider="showColliders: false" environment="preset: tron">
-  <a-entity gltf-model="#Ship"></a-entity>
+  <a-entity class="target" target="" geometry="primitive: octahedron" material="emissive: #00ffff; emissiveIntensity: 0.75" position="0 1.5 -4" hit-handler></a-entity>
+  <a-entity class="target" target="" geometry="primitive: octahedron" material="emissive: #00ffff; emissiveIntensity: 0.75" position="2 3.5 -4" hit-handler></a-entity>
+  <a-entity class="target" target="" geometry="primitive: octahedron" material="emissive: #00ffff; emissiveIntensity: 0.75" position="-2 3.5 -4" hit-handler></a-entity>
+  <a-entity class="target" target="" geometry="primitive: octahedron" material="emissive: #00ffff; emissiveIntensity: 0.75" position="4 1.5 -4" hit-handler></a-entity>
+  <a-entity class="target" target="" geometry="primitive: octahedron" material="emissive: #00ffff; emissiveIntensity: 0.75" position="-4 1.5 -4" hit-handler></a-entity>
 
-  
-  <a-camera look-controls wasd-controls="acceleration: 10; wsAxis: y; wsInverted: true" position="0 1 2">
-    <a-cursor color="white" shooter="bullets: normal; activeBulletType: normal" click-to-shoot></a-cursor>
-    <a-entity gltf-model="#Ship" obb-collider position="0 -0.3 -1.5" scale="5 5 5" rotation="-20 179.9998479605043 0"></a-entity>
-  </a-camera>
+<!--Camera-Ship-Gun-->
+    <a-camera id="camera" id="head" look-controls wasd-controls="acceleration: 10; wsAxis: y; wsInverted: true" position="0 1 2">
+      <a-entity gltf-model="#Ship" obb-collider position="0 -0.3 -1.5" rotation="-25 180 0" scale="5 5 5" rotation="-20 180 0">
+        <a-entity id="gun" shooter click-to-shoot rotation="-15 180 0"></a-entity>
+        <a-cursor color="white"></a-cursor>
+      </a-entity>
+      
+      <a-entity id="leftHand" hand-tracking-grab-controls="hand: left;"></a-entity>
+      <a-entity id="rightHand" hand-tracking-grab-controls="hand: right;"></a-entity>
+    </a-camera>
 
+    <a-entity gltf-model="#Ship" scale="5 5 5" rotation="0 180 0"></a-entity>
 
   </a-scene>
 </body>
