--- a/_Example/index.html
+++ b/_Example/index.html
@@ -14,7 +14,7 @@
     <script src="https://unpkg.com/aframe-environment-component@1.5.x/dist/aframe-environment-component.min.js"></script>
 
     <!-- Custom component for animation switching on hover -->
-    <script src="components/animation-switcher.js"></script>
+    <script src="components/animation-trigger.js"></script>
 
     <script src="shaders/shaders.js"></script>
   </head>
@@ -24,7 +24,7 @@
       <a-assets>
         <a-asset-item
           id="char"
-          src="objects/char02.glb"
+          src="objects/char01.glb"
         ></a-asset-item>
         <a-asset-item
           id="table"
@@ -61,9 +61,9 @@
       <!--Obst-->
       <a-entity
         id="character"
-        gltf-model="#char"
         raycast-exclude
-        animation-on-hover="defaultClip: Jumping; hoverClip: HeadTurning"
+        gltf-model="#char"
+        animation-trigger="idle: HeadTurning; hover: Jumping; debug: true"
         position="0 0.01223 -3.81011"
         scale="0.8 0.8 0.8"
       ></a-entity>
@@ -90,7 +90,7 @@
 
       <a-plane
         id="2ndroom"
-        navmesh=""
+        navmesh
         position="10.8963 1.24924 -4"
         rotation="-49.195302205522744 0 0"
         width="8"
