--- a/LianaOzolina/Armada/index.html
+++ b/LianaOzolina/Armada/index.html
@@ -1,61 +1,92 @@
 <head>
-  <title>My A-Frame Scene</title>
+
+  <title>Attention </title>
 <!--A-Frame-->
-  <script src="https://aframe.io/releases/1.7.1/aframe.min.js"></script>
+  <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
+<!--A-Frame Extras-->
+  <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.6.1/dist/aframe-extras.min.js"></script>
 <!--Environment-->
   <script src="https://unpkg.com/aframe-environment-component@1.3.3/dist/aframe-environment-component.min.js"></script>
-<!--Camera-Orbit-->
-  <script src="https://unpkg.com/aframe-orbit-controls@1.3.2/dist/aframe-orbit-controls.min.js"></script>
-<!--navigation component used in ImGame -->   
-    <script src="a-cursor-navigation.js"></script>
 <!--Event-Set Component-->
-    <script src="https://unpkg.com/aframe-event-set-component@5/dist/aframe-event-set-component.min.js"></script>
-<!--A-Frame Extras-->
-    <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.6.1/dist/aframe-extras.min.js"></script>
-<!--navigation component used in ImGame -->   
-    <script src="a-cursor-navigation.js"></script>
+  <script src="https://unpkg.com/aframe-event-set-component@5/dist/aframe-event-set-component.min.js"></script>
 <!--Shooting-Script--> 
   <script src="aframe-super-shooter-kit.min.js"></script>
-<!--Click-to-shoot -->
-  <script src="aframe-super-shooter-kit.min.js"></script>
+
+
 <script>
-    AFRAME.registerComponent('click-to-shoot', {
-      init: function () {
-        document.body.addEventListener('mousedown', () => { this.el.emit('shoot'); });
-      }
+AFRAME.registerComponent('click-to-shoot', {
+  init: function () {
+    document.body.addEventListener('mousedown', () => {
+    this.el.emit('shoot');
     });
-    /* Change color when hit. */
-    AFRAME.registerComponent('hit-handler', {
-      dependencies: ['material'],
-
-      init: function () {
-        var color;
-        var el = this.el;
-
-        color = new THREE.Color();
-        color.set('000');
-        el.components.material.material.color.copy(color);
-        el.addEventListener('hit', () => {
-          color.addScalar(0.05);
-          el.components.material.material.color.copy(color);
-        });
-
-        el.addEventListener('die', () => {
-  // Hide visually
-  el.setAttribute('visible', false);
-
-  // Make uninteractable
-  el.classList.remove('enemy'); // if raycaster targets a class
-  el.removeAttribute('raycaster');
-
-  // Optional: stop future events
-  el.pause();
+  }
 });
-      }
+
+// Change color when hit + die + respawn
+AFRAME.registerComponent('hit-handler', {
+  dependencies: ['material'],
+
+  init: function () {
+    const el = this.el;
+    const color = new THREE.Color();
+    let dead = false; // prevent double death / scoring
+
+    // Initial color
+    color.set('#000');
+    el.components.material.material.color.copy(color);
+
+    // On hit
+    el.addEventListener('hit', () => {
+    if (dead) return;
+    color.addScalar(0.05);
+    el.components.material.material.color.copy(color);
     });
-  </script>
 
+    // On die
+    el.addEventListener('die', () => {
+    if (dead) return;
+    dead = true;
 
+    // Add score
+    el.sceneEl.emit('score');
+
+    // Disable target
+    el.setAttribute('visible', false);
+    el.classList.remove('enemy');
+    el.pause();
+
+    // Respawn after 10 seconds
+    setTimeout(() => {
+
+    // Reset state
+    dead = false;
+
+    // Reset color
+    color.set('#000');
+    el.components.material.material.color.copy(color);
+
+    // Re-enable target
+    el.setAttribute('visible', true);
+    el.classList.add('enemy');
+    el.play();
+    }, 10000); // 10 seconds
+    });
+  }
+});
+
+// Score system
+AFRAME.registerComponent('score-keeper', {
+  init: function () {
+    this.score = 0;
+    this.el.setAttribute('text', 'value', '0');
+
+    this.el.sceneEl.addEventListener('score', () => {
+      this.score += 1;
+      this.el.setAttribute('text', 'value', `${this.score}`);
+    });
+  }
+});
+</script>
 
 
 
@@ -78,9 +109,20 @@
 <body>
   <a-scene environment="preset: tron; ground: noise; groundTexture: none; dressing: none" fog="color: #940000; far: 83.99999999999999">
 
+<a-entity
+  position="12.250 4 -40"
+  scale="10 10 10"
+  text="color: #787878; width: 20; value: align: center; tabSize: 4; alphaTest: 0.5; align: center"
+  score-keeper>
+</a-entity>
+<a-entity
+  position="-7.5 4 -40"
+  scale="10 10 10"
+  text="color: #787878; width: 20; value: SCORE; tabSize: 4; alphaTest: 0.5; align: center">
+</a-entity>
 
-<a-entity position="0 0.99938 0" text="color: white; value: Get in loser. We're going shooting.; width: 1.5">
-      </a-entity>
+
+<!--<a-entity position="0 0.99938 0" text="color: white; value: Get in loser. We're going shooting.; width: 1.5"></a-entity>-->
 
 
 
