go-to component text

--- a/_Example/index.html
+++ b/_Example/index.html
@@ -32,6 +32,13 @@
         ></a-asset-item>
       </a-assets>
 
+      <a-entity
+        id="text_01"
+        text__text01="value: Go-to component; wrapCount: 31.89"
+        position="-0.5998 1.23599 -2.19407"
+        rotation="0 -36.529497186360764 0"
+        scale="2.42813 2.42813 2.42813"
+      ></a-entity>
       <a-box
         go-to="position: -2 2 2"
         position="-1 0.5 -3"
